# matchhostfsowner

./: .dockerignore  .editorconfig  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.integration-test-base  LICENSE.md  Makefile  README.md  SECURITY-NOTES.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  release.yml  rust.yml  test.yml
release-scripts/hooks.d/: limited-chown-home.sh
src/: abort.rs  config.rs  main.rs  os_group.rs  simple_logger.rs  system_calls.rs  utils.rs
tests/: common.rs  integration_test.rs
