[package]
name = "matchhostfsowner"
version = "1.0.1"
authors = ["Hongli Lai <hongli@hongli.nl>"]
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[dependencies]
yaml-rust = "^0.4.5"
chrono = "^0.4.0"
colored = "^1.6"
log = { version = "^0.4.6", features = ["std"] }
nix = "^0.25.0"
thiserror = "^1.0.24"
libc = "^0.2"
shell-escape = "^0.1.5"

[dev-dependencies]
tempfile = "3"
more-asserts = "^0.2.1"
regex = "^1.0"
