[package]
name = "matchhostfsowner"
version = "1.0.2"
authors = ["Hongli Lai <hongli@hongli.nl>"]
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[dependencies]
yaml-rust2 = "^0.11.0"
chrono = "^0.4.0"
colored = "^3.1.1"
log = { version = "^0.4.6", features = ["std"] }
nix = { version = "^0.31.2", features = ["user", "process"] }
thiserror = "^2.0.18"
libc = "^0.2"
shell-escape = "^0.1.5"

[dev-dependencies]
tempfile = "3"
more-asserts = "^0.3.1"
regex = "^1.0"
